Fixed a couple of typos in the intro to 09 article (you never notice em til launch)

--- a/articles/refreshed-realigned-and-ready-for-09.haml
+++ b/articles/refreshed-realigned-and-ready-for-09.haml
@@ -43,15 +43,15 @@
   
   There's still more work to do on the article layout&#8212;for example I'd like to have a left gutter for small images&#8212;but it's a good start.
 
-  It would have been a shame to let the Menki logo and website join its cousins in the land of designs-never-published&#8212;after all, it was bashing together from the kitchen table of "the nerf palace":http://nerfpalace.org/.
+  It would have been a shame to let the Menki logo and website join its cousins in the land of designs-never-published&#8212;after all, it was bashed together from the kitchen table of "the nerf palace":http://nerfpalace.org/.
 
   h2(#comments-and-discussion). Comments and discussion
 
-  I've debated long and hard about whether to include comments and what value they give the site. Different types of feedback require different tools and consideration and I think it's the mishmash of all the types of feedback which makes comments ultimately too unwieldily.
+  I've debated long and hard about whether to include comments and what value they give the site. Different types of feedback require different tools and consideration and I think it's the mishmash of all the types of feedback which makes comments ultimately too unwieldy.
   
   h3. Errors and ommissions
   
-  Many of the technical articles, such as a "Getting Rails talking to SQLServer on OSX via ODBC":/articles/getting_rails_talking_to_sqlserver_on_osx_via_odbc, are old and discussing software I haven't touched since writing about it. Errors and corrections end up in the comments, but then once the article is updated there's a spattering of redundant comments. Comments like these should simply be integrated and discarded, so I'm choosing to leave these to email.
+  Many of the technical articles are old, such as a "Getting Rails talking to SQLServer on OSX via ODBC":/articles/getting_rails_talking_to_sqlserver_on_osx_via_odbc, and discussing software I haven't touched since writing about it. Errors and corrections end up in the comments and once the article is updated there's a spattering of redundant comments. Comments like these should simply be integrated and discarded, so I'm choosing to leave these to email.
   
   h3. Open-ended discussions
   
