Fix relative ref to github

--- a/articles/im_a_little_teapot.haml
+++ b/articles/im_a_little_teapot.haml
@@ -4,7 +4,7 @@
 :textile
   Like any good standards-based teapot "toolmantim.com":http://toolmantim.com/ is now compliant with "Section 2.3.2":http://tools.ietf.org/html/rfc2324#section-2.3.2 of RFC2324: the Hyper Text Coffee Pot Control Protocol (HTCPCP/1.0).
   
-  You too can be a good teapot citizen thanks to a ruby gem so fresh out of the oven it'll burn your fingers: "teapot":github.com/toolmantim/teapot/ -- a new piece of innvoative "Rack":http://rack.rubyforge.org/ middleware technology enabling you to do such feats as:
+  You too can be a good teapot citizen thanks to a ruby gem so fresh out of the oven it'll burn your fingers: "teapot":http://github.com/toolmantim/teapot/ -- a new piece of innvoative "Rack":http://rack.rubyforge.org/ middleware technology enabling you to do such feats as:
   
   <pre><code class="shell">
   $ curl -i -X BREW toolmantim.com
