Include a pointer to the installation instructions

--- a/articles/im_a_little_teapot.haml
+++ b/articles/im_a_little_teapot.haml
@@ -21,3 +21,5 @@
   Alternative Ruby teapot implementations of RFC3224 include "a patch to Rails":http://rails.lighthouseapp.com/projects/8994/tickets/1556 by "Chris Lloyd":http://chrislloyd.com.au/ and the "acts_as_teapot plugin":http://github.com/harukizaemon/acts_as_teapot by "Simon Harris":http://www.redhillconsulting.com.au/blogs/simon/.
 
   Those wanting a more short and stout implementation are advised to architect their own solutions. Frankly I think it's much more polite to offer a cup of tea than waving your arms about like a flaming galah.
+
+  See the "readme on github":http://github.com/toolmantim/teapot/ for installation instructions.
