add the George Foreman factor

--- a/articles/im_a_little_teapot.haml
+++ b/articles/im_a_little_teapot.haml
@@ -22,4 +22,4 @@
 
   Those wanting a more short and stout implementation are advised to architect their own solutions. Frankly I think it's much more polite to offer a cup of tea than waving your arms about like a flaming galah.
 
-  See the "readme on github":http://github.com/toolmantim/teapot/ for installation instructions.
+  See the "readme on github":http://github.com/toolmantim/teapot/ for installation instructions and teapot-enable your Rack application today!
