Fix invalid HTML in the teapot article

--- a/articles/im_a_little_teapot.haml
+++ b/articles/im_a_little_teapot.haml
@@ -16,7 +16,7 @@
   Content-Type: text/plain; charset=UTF-8
   
   Care for a cup of English Breakfast?
-  </pre></code>
+  </code></pre>
 
   Alternative Ruby teapot implementations of RFC3224 include "a patch to Rails":http://rails.lighthouseapp.com/projects/8994/tickets/1556 by "Chris Lloyd":http://chrislloyd.com.au/ and the "acts_as_teapot plugin":http://github.com/harukizaemon/acts_as_teapot by "Simon Harris":http://www.redhillconsulting.com.au/blogs/simon/.
 
