Updated references to application, options and headers for Sinatra 0.9 compatibility

--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -520,7 +520,7 @@ body.projects-js ol.projects > li
   .link
     +standard_text_size
     a
-      :font-size = 1.8/1.4em
+      :font-size = 1.8em/1.4em
     
   .caption
     +standard_text_size
