Added tip about UserDir thanks to Mike Harris

--- a/articles/sharing_git_repositories_via_os_xs_built_in_web_sharing.haml
+++ b/articles/sharing_git_repositories_via_os_xs_built_in_web_sharing.haml
@@ -28,6 +28,8 @@
     Allow from all
   </Directory></code></pre>
   
+  Alternatively you could change <code>/etc/apache2/extra/httpd-userdir.conf</code> to use <code>www</code> instead of <code>Sites</code> as the default user directory.
+  
   Restart apache2, put in a test file and see what happens:
   
   <pre><code class="shell">$ sudo apachectl restart
