Remove da span from the article title

--- a/articles/sharing_git_repositories_via_os_xs_built_in_web_sharing.haml
+++ b/articles/sharing_git_repositories_via_os_xs_built_in_web_sharing.haml
@@ -1,4 +1,4 @@
--# title: Sharing git repositories via <span class="caps">OS X</span>&#8217;s built-in web sharing
+-# title: Sharing git repositories via OS X&#8217;s built-in web sharing
 -# published: 2007-12-05
 
 :textile
