Toying with titles

--- a/views/_meta.haml
+++ b/views/_meta.haml
@@ -1,5 +1,5 @@
 %p.intro
-  I'm <strong>Tim Lucas</strong>, a web app designer and developer currently in Sydney&nbsp;Australia.
+  I'm <strong>Tim Lucas</strong>, a user experience designer and developer currently in Sydney&nbsp;Australia.
 
 %p.blurb
   I run a <strong>web&nbsp;application design and development</strong> company <a
