Fix up da stylin on the 404 page

--- a/views/not_found.haml
+++ b/views/not_found.haml
@@ -1,6 +1,7 @@
 - @page_title = "toolmantim.com - not found"
 - @body_class = "not-found"
 
-%p
-  %strong Deary me!
-  The page you&rsquo;re after is no longer around these parts.
+.content
+  %p
+    %strong Deary me!
+    The page you&rsquo;re after has been removed or never existed.
