Added starts of a photos section

--- a/views/_meta.haml
+++ b/views/_meta.haml
@@ -23,4 +23,6 @@
   %li
     %a{:href => "/articles"} Articles
   %li
+    %a{:href => "/photos"} Photos
+  %li
     %a{:href => "/projects"} Projects
