--- a/views/archive.haml
+++ b/views/archive.haml
@@ -3,6 +3,8 @@
 
 %h1.major Articles
 
+%p.page-desc A random collection of infrequently-updated mostly-tech-related howtos, updates and what-nots.
+
 %ol.archive
   - for year in @articles_by_year_then_month.keys.sort.reverse
     %li
