--- a/views/projects.haml
+++ b/views/projects.haml
@@ -3,6 +3,8 @@
 
 %h1.major Projects
 
+%p.page-desc Various web things I've launched recently.
+
 %ol.projects
   %li#toolmantim-09
     %h2 toolmantim.com &lsquo;09
