Remove refs to .DS_Store, you dun wanna ignore that

--- a/articles/setting_up_a_new_rails_app_with_git.haml
+++ b/articles/setting_up_a_new_rails_app_with_git.haml
@@ -1,5 +1,6 @@
 -# title: Setting up a new Rails app with Git
 -# published: 2007-12-05
+-# updated: 2009-04-03
 
 :textile
   <a href="http://www.flickr.com/photos/toolmantim/2086014976/" title="Pizza Glow by toolmantim, on Flickr"><img src="http://farm3.static.flickr.com/2005/2086014976_da3c4a2468_m.jpg" width="240" height="160" alt="Pizza Glow" /></a>
@@ -14,7 +15,6 @@
   
   <pre><code>log/*.log
   tmp/**/*
-  .DS_Store
   doc/api
   doc/app</code></pre>
   
@@ -226,7 +226,6 @@
   tmp/**/*
   
   # Other useful tidbits
-  .DS_Store
   doc/api
   doc/app
   </code></pre>
@@ -378,7 +377,6 @@
   
   <pre><code>log/*.log
   tmp/**/*
-  .DS_Store
   doc/api
   doc/app</code></pre>
   
