Implement the feature photo funkiness. All that's left is some caching

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -21,6 +21,7 @@
       %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}/
       %link{:rel => "openid.delegate", :href => "http://toolmantim.myopenid.com"}/
       
+    = @head_content
 
   %body{:class => @body_class}
     #body-inner
