--- a/views/photo.haml
+++ b/views/photo.haml
@@ -6,32 +6,50 @@
 - @head_content = %(<style type="text/css" media="screen">#body-inner { width: #{large_size[:width].to_i + image_padding * 2}px }</style>)
 
 .photo
-  %a{:href => flickr_url(@photo)}
+  %a.main{:href => flickr_url(@photo)}
     %img{:src => flickr_src(@photo, "b"), :width => large_size[:width], :height => large_size[:height], :alt => @photo[:title]}/
 
-  - if (title = (@photo/:title).text.strip).length != 0
-    - @page_title = "'#{title}' by Tim Lucas"
-    %h1
-      %a{:href => flickr_url(@photo)}= title
-  - else
-    - @page_title = "Untitled by Tim Lucas"
+  %h1
+    %a{:href => flickr_url(@photo)}
+      - if (title = (@photo/:title).text.strip).length != 0
+        - @page_title = "'#{title}' by Tim Lucas"
+        = title
+      - else
+        - @page_title = "Untitled by Tim Lucas"
+        Untitled
 
-  - if (@photo/:description).text.strip.length != 0
-    .description
+  .description
+
+    - if (@photo/:description).text.strip.length != 0
       = (@photo/:description).text.split("\n\n").map {|s| "<p>#{s}</p>"}
 
-  %p.extra
-    %a.comments{:href => flickr_url(@photo) + "#DiscussPhoto", :title => "Read and leave comments on Flickr" }
+  %p.comments
+    %a{:href => flickr_url(@photo) + "#DiscussPhoto", :title => "Read and leave comments on Flickr" }
       - comments = (@photo/:comments).text.to_i
       - case comments
       - when 0
         No comments
       - when 1
-        1 comments
+        1 comment
       - else
         == #{comments} comments
-    \|
-    %a.more{:href => "/photos#featured"} More photos &rarr;
 
   %p.license
-    License: Nothin.
+    %a{:rel => "license", :href => "http://creativecommons.org/licenses/by-sa/2.0/"}
+      %img{:src => "http://i.creativecommons.org/l/by-sa/2.0/80x15.png", :alt => "Creative Commons License"}/
+
+
+  .more-photos
+    %ul
+      - if @prev_photo
+        %li.prev
+          %a{:href => photo_path(@prev_photo), :title => @prev_photo[:title]}= flickr_square(@prev_photo)
+      %li.current
+        %span= flickr_square(@photo)
+      - if @next_photo
+        %li.next
+          %a{:href => photo_path(@next_photo), :title => @next_photo[:title]}= flickr_square(@next_photo)
+
+
+  %p.more
+    %a{:href => "/photos#featured"} and more&hellip;
