--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -631,7 +631,7 @@ body.photo
     +standard_text_size
     :margin-top 5px
 
-  p.comments a, p.tags span
+  p.comments a
     :padding-left 17px
 
   p.comments
