--- a/views/layout.haml
+++ b/views/layout.haml
@@ -41,8 +41,8 @@
           Powered by
           %a{:href => "http://github.com/toolmantim/toolmantim", :title => "View source"}= Quip.random
 
-    -# - %w( jquery-1.2.6.min code_highlighter all ).each do |js|
-    -#   %script{:src => versioned_js(js), :type => "text/javascript"}
+    - %w( jquery-1.2.6.min code_highlighter all ).each do |js|
+      %script{:src => versioned_js(js), :type => "text/javascript"}
 
     %script{:type => "text/javascript"}
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
