Change the license to remove the share alike

--- a/views/photo.haml
+++ b/views/photo.haml
@@ -26,8 +26,8 @@
       = pluralize((@photo/:comments).text, "comment")
 
   %p.license
-    %a{:rel => "license", :href => "http://creativecommons.org/licenses/by-sa/2.0/"}
-      %img{:src => "http://i.creativecommons.org/l/by-sa/2.0/80x15.png", :alt => "Creative Commons License"}/
+    %a{:rel => "license", :href => "http://creativecommons.org/licenses/by/2.5/au/"}
+      %img{:src => "http://i.creativecommons.org/l/by/2.5/au/88x31.png", :alt => "Creative Commons Attribution License 2.5"}/
 
   %p.tags
     Tags:
