--- a/views/photo.haml
+++ b/views/photo.haml
@@ -31,9 +31,7 @@
 
   %p.tags
     Tags:
-    - for tag in @photo/:tag
-      %span{:rel => "tag"}= tag.html
-
+    = (@photo/:tag).map {|t| %(<a rel="tag" href="http://flickr.com/photos/toolmantim/tags/#{t.html}" title="All flickr photos by toolmantim tagged with '#{t[:raw]}'">#{t[:raw]}</a>) }.join(", ")
 
   .more-photos
     %ul
