--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -645,7 +645,11 @@ body.photo
         :opacity 1
 
   p.tags
-    :color #555
+    &, a
+      :color #555
+      
+    a:hover
+      :text-decoration underline
 
   p.license a
     :opacity 0.6
