--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -263,6 +263,9 @@ body.projects p.page-desc
     :text-transform uppercase
     :font-size 1.2em
     :color = !bright_text
+    
+    .updated
+      :color = !slightly_dull_text
   
   .feedback, .more-reading
     p
@@ -351,6 +354,10 @@ body.projects p.page-desc
       :border-color = !very_dull_text
     .pic a:hover img
       :border-color = !bright_blue
+      
+    div.update
+      :border-left 5px solid #468
+      :padding-left 1em
       
     .one
       :width 100px
