You don't need refs/heads these days

--- a/articles/setting_up_a_new_remote_git_repository.haml
+++ b/articles/setting_up_a_new_remote_git_repository.haml
@@ -162,7 +162,7 @@
   Created initial commit 0ac9a74: Added afile
    1 files changed, 1 insertions(+), 0 deletions(-)
    create mode 100644 something
-  $ git push origin master:refs/heads/dev/rails-2
+  $ git push origin master:rails-2
   updating 'refs/heads/rails-2' using 'refs/heads/master'
     from 0000000000000000000000000000000000000000
     to   0ac9a7457f4b21c9e058d4c54d262584bf35e528
