--- a/views/layout.haml
+++ b/views/layout.haml
@@ -52,6 +52,6 @@
       var pageTracker = _gat._getTracker("UA-196014-3");
       pageTracker._trackPageview();
       } catch(err) {}
-    %script{:type => "text/javascript", :src => "http://include.reinvigorate.net/re_.js"}/
+    %script{:type => "text/javascript", :src => "http://include.reinvigorate.net/re_.js"}
     %script{:type => "text/javascript"}
       re_("8cx59-68584an6na");
