--- a/articles/setting_up_a_new_remote_git_repository.haml
+++ b/articles/setting_up_a_new_remote_git_repository.haml
@@ -4,9 +4,14 @@
 
 :textile
   To collaborate in a distributed development process you'll need to push code to remotely accessible repositories.
-  
+
   This is somewhat of a follow-up to the previous article "setting up a new rails app with git":http://toolmantim.com/article/2007/12/5/setting_up_a_new_rails_app_with_git.
-  
+
+.github-ad
+  :markdown
+    It's good to know how this stuff works, but this is definitely the hard way. For no fuss git repository setup (especially if you want to collaborate with others) check out [GitHub](http://github.com/?ref=toolmantim).
+
+:textile
   h2. For the impatient
   
   Set up the new bare repo on the server:
@@ -228,6 +233,10 @@
   h2. Further Reading
   
   "Sourcemage's Git Guide":http://wiki.sourcemage.org/Git_Guide has some very very handy real-life examples of git commands you'll often need.
+
+.github-ad
+  :markdown
+    So now you know the hard way. For no fuss Git repository setup (especially if you want to collaborate with others) check out [GitHub](http://github.com/?ref=toolmantim).
 
 #archived-comments
   %h1 Archived comments
