--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -395,6 +395,11 @@ body.projects p.page-desc
       li
         :font-size 1.0em
     
+    .github-ad
+      :border-left 4px solid #666
+      :padding-left 10px
+      :color #fff
+    
     @import views/stylesheets/code_highlighting.sass
 
 body.projects
