Clarify that this isn't just a directory, but a git repo

--- a/articles/setting_up_a_new_remote_git_repository.haml
+++ b/articles/setting_up_a_new_remote_git_repository.haml
@@ -25,7 +25,7 @@
   Bye!
   </code></pre>
   
-  Add the remote repository and push:
+  Add the remote repository to your existing local git repo and push:
   
   <pre><code class="shell">$ cd ~/Sites/myapp
   $ git remote add origin ssh://myserver.com/var/git/myapp.git
